[package]
name = "aspen-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
# Bolero unified fuzzing frontend (supports libFuzzer, AFL, Honggfuzz, Kani)
bolero = "0.13"
bolero-generator = "0.13"

# Main crate with fuzzing feature
aspen = { path = "..", features = ["fuzzing"] }

# Serialization formats used by aspen
postcard = { version = "1.0", features = ["alloc"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenRaft types for fuzzing Raft messages
openraft = { path = "../openraft/openraft", features = ["serde", "type-alias"] }

# Iroh gossip for cluster ticket fuzzing
iroh-gossip = "0.95"

# Additional dependencies for new fuzz targets
toml = "0.8"
hex = "0.4"
blake3 = "1.5"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }

[dev-dependencies]
# None needed

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
