[package]
name = "aspen-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
# Bolero uses test harness instead of cargo-fuzz
bolero = true

[lib]
path = "src/lib.rs"

[dependencies]
# Bolero unified fuzzing frontend (supports libFuzzer, AFL, Honggfuzz, Kani)
bolero = "0.13"
bolero-generator = "0.13"

# Main crate with fuzzing feature
aspen = { path = "..", features = ["fuzzing"] }

# Serialization formats used by aspen
postcard = { version = "1.0", features = ["alloc"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenRaft types for fuzzing Raft messages
openraft = { path = "../../aspen-raft/openraft/openraft", features = ["serde", "type-alias"] }

# Iroh gossip for cluster ticket fuzzing
iroh-gossip = "0.95"

# Additional dependencies for new fuzz targets
toml = "0.8"
hex = "0.4"
blake3 = "1.5"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }

[dev-dependencies]
# None needed

# Fuzz test targets (run with cargo bolero test)
[[test]]
name = "fuzz_raft_rpc"
path = "fuzz_targets/fuzz_raft_rpc.rs"

[[test]]
name = "fuzz_snapshot_json"
path = "fuzz_targets/fuzz_snapshot_json.rs"

[[test]]
name = "fuzz_cluster_ticket"
path = "fuzz_targets/fuzz_cluster_ticket.rs"

[[test]]
name = "fuzz_gossip"
path = "fuzz_targets/fuzz_gossip.rs"

[[test]]
name = "fuzz_log_entries"
path = "fuzz_targets/fuzz_log_entries.rs"

[[test]]
name = "fuzz_client_rpc"
path = "fuzz_targets/fuzz_client_rpc.rs"

[[test]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"

[[test]]
name = "fuzz_protocol_handler"
path = "fuzz_targets/fuzz_protocol_handler.rs"

[[test]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"

[[test]]
name = "fuzz_metadata"
path = "fuzz_targets/fuzz_metadata.rs"

[[test]]
name = "fuzz_integrity"
path = "fuzz_targets/fuzz_integrity.rs"

[[test]]
name = "fuzz_clock_drift"
path = "fuzz_targets/fuzz_clock_drift.rs"

[[test]]
name = "fuzz_differential"
path = "fuzz_targets/fuzz_differential.rs"

[[test]]
name = "fuzz_raft_model_guided"
path = "fuzz_targets/fuzz_raft_model_guided.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
