[package]
name = "aspen-api"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
description = "API bridge between aspen-core and OpenRaft types"
authors = ["Aspen Contributors"]

[dependencies]
# Core dependencies
aspen-core = { workspace = true }
aspen-raft = { workspace = true }

# OpenRaft for type conversions
openraft = { path = "../../openraft/openraft", features = ["serde", "type-alias"] }

# Async traits
async-trait = "0.1"

# For deterministic implementations
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }