[package]
name = "aspen-auth"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
description = "Capability-based authorization for Aspen distributed systems"

[dependencies]
# Core types and traits
aspen-core = { path = "../aspen-core" }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
base64 = "0.22"
hex = "0.4"

# Cryptography
blake3 = "1.5"
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
rand = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
