[package]
name = "aspen-auth"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Capability-based authorization for Aspen distributed systems"

[dependencies]
# Core types and traits
aspen-core = { package = "aspen-core-shell", path = "../aspen-core-shell" }
aspen-crypto = { path = "../aspen-crypto" }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
base64 = "0.22"
hex = "0.4"

# Cryptography
blake3 = "1.5"
hmac = "0.12"
sha2 = "0.10"
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
rand = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
