[package]
name = "aspen-auth"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Capability-based authorization for Aspen distributed systems"

[dependencies]
# Core shell integration
aspen-auth-core = { path = "../aspen-auth-core" }
aspen-core = { package = "aspen-core-shell", path = "../aspen-core-shell" }

# Async traits
async-trait = "0.1"

# Serialization
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
iroh-base = { version = "0.97.0", default-features = false, features = ["key"] }

# Error handling
anyhow = "1.0"

# Utilities
rand = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
