[package]
name = "aspen-automerge-plugin"
version = "0.1.0"
edition = "2024"
description = "WASM guest plugin for Automerge CRDT document management"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
aspen-wasm-guest-sdk = { path = "../aspen-wasm-guest-sdk" }
aspen-client-api = { path = "../aspen-client-api", default-features = false, features = ["automerge"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
