[package]
name = "aspen-automerge"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Automerge CRDT document layer for Aspen with collaborative editing support"

[dependencies]
# Core types and traits
aspen-core = { workspace = true }
aspen-auth = { workspace = true }

# Automerge CRDT library
automerge = "0.7"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
anyhow = "1.0"
snafu = "0.8.9"
thiserror = "2.0"

# Async utilities
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Logging
tracing = "0.1"

# Bytes handling
bytes = "1.7"

# Hex encoding for document IDs
hex = "0.4"

# Base64 encoding for binary data in string KV
base64 = "0.22"

# P2P networking for sync protocol
iroh = "0.95"

[dev-dependencies]
aspen-auth = { workspace = true }
aspen-testing = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
