[package]
name = "aspen-blob-handler"
version = "0.1.0"
edition = "2024"
description = "Blob storage RPC handler for Aspen distributed cluster"
license = "AGPL-3.0-or-later"

[dependencies]
# RPC core abstractions (RequestHandler trait, ClientProtocolContext)
aspen-rpc-core = { path = "../aspen-rpc-core", features = ["blob", "global-discovery"] }

# Local crates
aspen-client-api = { workspace = true }
aspen-core = { path = "../aspen-core" }
aspen-blob = { path = "../aspen-blob" }

# Core dependencies
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
iroh = { version = "0.95.1" }
iroh-blobs = "0.97"

[features]
default = []
global-discovery = ["aspen-rpc-core/global-discovery"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
