[package]
name = "aspen-blob"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
description = "Content-addressed blob storage for Aspen using iroh-blobs"

[dependencies]
# Core types and traits
aspen-core = { path = "../aspen-core" }

# Iroh P2P and blobs
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
snafu = "0.8.9"

# Async utilities
bytes = "1.7"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }

# Logging
tracing = "0.1"
