[package]
name = "aspen-blob"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Content-addressed blob storage for Aspen using iroh-blobs"

[dependencies]
# Core types and traits
aspen-core = { path = "../aspen-core" }

# Client API types (for replication RPC)
aspen-client-api = { workspace = true }

# Iroh P2P and blobs
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-blobs = "0.97"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Error handling
anyhow = "1.0"
snafu = "0.8.9"

# Async utilities
bytes = "1.7"
n0-future = { workspace = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Encoding
hex = "0.4"

[dev-dependencies]
rand = { version = "0.9", features = ["std_rng"] }
