[package]
name = "aspen-blob"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/brittonr/aspen"
description = "Content-addressed blob storage for Aspen using iroh-blobs"

[features]
default = []
replication = ["dep:aspen-client-api"]

[dependencies]
# Narrow KV types and trait
aspen-traits = { path = "../aspen-traits" }
aspen-kv-types = { path = "../aspen-kv-types" }

# Client API types (for replication RPC)
aspen-client-api = { path = "../aspen-client-api", optional = true }

# Iroh P2P and blobs
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-blobs = "0.99.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Error handling
anyhow = "1.0"
snafu = "0.8.9"

# Async utilities
bytes = "1.7"
n0-future = "0.3.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Encoding
hex = "0.4"

[dev-dependencies]
rand = { version = "0.9", features = ["std_rng"] }
