[package]
name = "aspen-cache-handler"
version = "0.1.0"
edition = "2024"
description = "Nix binary cache RPC handlers for Aspen distributed cluster"
license = "AGPL-3.0-or-later"

[dependencies]
# RPC core abstractions (RequestHandler trait, ClientProtocolContext)
aspen-rpc-core = { path = "../aspen-rpc-core", features = ["blob"] }

# Local crates
aspen-client-api = { workspace = true, features = ["ci"] }
aspen-core = { path = "../aspen-core" }
aspen-cache = { path = "../aspen-cache" }
aspen-blob = { path = "../aspen-blob" }

# Iroh dependencies
iroh-blobs = "0.97"

# Core dependencies
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
