[package]
name = "aspen-cache"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/brittonr/aspen"
description = "Distributed Nix binary cache for Aspen using iroh-blobs storage"

[features]
default = []
kv-index = ["dep:aspen-time", "dep:aspen-traits", "dep:aspen-kv-types"]

[dependencies]
# Cluster KV integration (feature-gated)
aspen-time = { workspace = true, optional = true }
aspen-traits = { workspace = true, optional = true }
aspen-kv-types = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
snafu = "0.8.9"

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["process"] }

# Logging
tracing = { workspace = true }

# Encoding
data-encoding = "2"

# Nix format types (narinfo, nixbase32, store paths, signing, NAR writer)
nix-compat = { workspace = true }

# SHA-256 for NAR hashing
sha2 = "0.10"

# Narinfo signing (ed25519-dalek + rand used by CacheSigningKey::generate)
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
aspen-testing = { workspace = true }
tempfile = "3"
