[package]
name = "aspen-calendar-handler"
version = "0.1.0"
edition = "2024"
description = "Calendar RPC handler for Aspen distributed cluster"
license = "AGPL-3.0-or-later"

[dependencies]
aspen-rpc-core = { path = "../aspen-rpc-core" }
aspen-client-api = { workspace = true }
aspen-calendar = { path = "../aspen-calendar" }
aspen-kv-types = { path = "../aspen-kv-types" }
aspen-traits = { path = "../aspen-traits" }

anyhow = "1.0"
async-trait = "0.1"
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aspen-testing-core = { path = "../aspen-testing-core" }
tokio = { version = "1.0", features = ["full", "test-util"] }
